Bug: Remove gx-5 from album section to clear white space on right of page

--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ video {
 }
 
 h4 {
-    color: aliceblue;
+    color: white;
 }
 
 
